Further fixes, remove unnecessary wrapping span

--- a/src/expandable-section/styles.scss
+++ b/src/expandable-section/styles.scss
@@ -12,7 +12,8 @@
 $icon-width-normal: awsui.$size-icon-normal;
 $icon-width-medium: awsui.$size-icon-medium;
 $icon-margin-left: '(#{awsui.$font-body-m-line-height} - #{$icon-width-normal}) / -2';
-$icon-margin-right: '#{awsui.$space-xxs} + #{awsui.$border-divider-list-width}';
+$icon-margin-right-normal: '#{awsui.$space-xxs} + #{awsui.$border-divider-list-width}';
+$icon-margin-right-medium: awsui.$space-xs;
 
 .root {
   @include styles.styles-reset;
@@ -36,9 +37,9 @@ $icon-margin-right: '#{awsui.$space-xxs} + #{awsui.$border-divider-list-width}';
   position: relative;
   margin-left: calc(#{$icon-margin-left});
   // For vertical alignment of text in side navigation items
-  margin-right: calc(#{$icon-margin-right});
+  margin-right: calc(#{$icon-margin-right-normal});
   &-container {
-    margin-right: awsui.$space-xs;
+    margin-right: $icon-margin-right-medium;
   }
 }
 
@@ -188,8 +189,8 @@ $icon-margin-right: '#{awsui.$space-xxs} + #{awsui.$border-divider-list-width}';
 
 // Indent the description by exactly the same amount as the header, which is pushed to the right by the icon.
 .description-default {
-  padding-left: calc(#{$icon-width-normal} + #{$icon-margin-right} + #{$icon-margin-left});
+  padding-left: calc(#{$icon-width-normal} + #{$icon-margin-left} + #{$icon-margin-right-normal});
 }
 .description-container {
-  padding-left: calc(#{$icon-width-medium} + #{$icon-margin-right} + #{$icon-margin-left});
+  padding-left: calc(#{$icon-width-medium} + #{$icon-margin-left} + #{$icon-margin-right-medium});
 }
